--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="images/ef8edb2c-e4d7-4632-b5ec-e143554a86f2-2.jpg"
+        <a class="navbar-brand" href="index.html"><img src="images/ef8edb2c-e4d7-4632-b5ec-e143554a86f2-2.jpg"
             alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
   </header>
   <section>
     <div class="bgvideo">
-    <video src="files/vid.mov" type="video/mov" autoplay muted loop></video>
+    <video src="files/vid.mp4" type="video/mov" autoplay muted loop></video>
     <div class="effect"></div>
     <div class="video-text">
       <h1>Будущее здесь</h1>
