--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <video src="files/vid.mp4" type="video/mov" autoplay muted loop></video>
     <div class="effect"></div>
     <div class="video-text">
-      <h1>Будущее здесь</h1>
+      <h1>Растим будущее</h1>
     </div>
     </div>
 
