--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
 
             <div class="col-lg-12 col-md-12 text-center mt-4">
-            <button type="button" class="btn btn-outline-primary btn-lg my-4">Посмотреть больше</button>
+            <button type="button" class="btn btn-outline-primary btn-lg my-4"><a href="pricing.html">Посмотреть больше</a></button>
             </div>
             <div class="col-lg-12 col-md-12 text-center mt-4">
               <p>Нужна помощь?</p>
@@ -233,22 +233,13 @@
         <div class="col-lg-3 col-md-12">
           <div class="row px-2">
             <div class="col-lg-12 sidebar my-4">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nihil quasi possimus voluptatum!
-                Error praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a
+              <p>При оплате до 31 декабря 2024 г. на каждый курс предоставляется скидка 10%<a
                   href="#">Узнать больше>>></a></p>
             </div>
             <div class="col-lg-12 sidebar my-4">
-              <p>Error praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a
+              <p>Для работодателей, которым необходимо обучить сотрудников, предоставляются скидки на группы от 10 человек<a
                   href="#">Узнать больше>>></a></p>
-            </div>
-            <div class="col-lg-12 sidebar my-4">
-              <p>praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a
-                  href="#">Узнать больше>>></a></p>
-            </div>
-            <div class="col-lg-12 sidebar my-4">
-              <p>Lorem ipsum dolor sit amet coum impedit iure assumenda at, corporis natus quae. Numquam laboriosam
-                laborum quidem? <a href="#">Узнать больше>>></a></p>
-            </div>
+            </div>            
           </div>
         </div>
 
@@ -263,11 +254,11 @@
           <p>Все права защищены 2024</p>
         </div>
         <div class="col-lg-4 col-md-12 footer-text text-center">
-          <p>Контакты<br> Работа<br>Наша команда<br></p>
+          <p>Контакты<br>Наша команда<br></p>
         </div>
         <div class="col-lg-4 col-md-12t media-links">
           <img style="width: 40px; margin-inline: 1em;" src="images/yt.png" alt="">
-          <img style="width: 40px; margin-inline: 1em;" src="images/tg.png" alt="">
+          <a href="https://t.me/YuliyaBazhenova"><img style="width: 40px; margin-inline: 1em;" src="images/tg.png" alt=""></a>
         </div>
       </div>
     </div>
@@ -277,5 +268,4 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
