--- a/pricing.html
+++ b/pricing.html
@@ -33,12 +33,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pricing.html">
-                <img style="width: 35px; margin-inline: 1em;" src="images/yt.png" alt="">
+                <a href="https://youtube.com"><img style="width: 35px; margin-inline: 1em;" src="images/yt.png" alt=""></a>
               </a>
             </li>
-              <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="pricing.html">
-                <img style="width: 35px; margin-inline: 1em;" src="images/tg.png" alt="">
+                <a href="https://t.me/YuliyaBazhenova"><img style="width: 35px; margin-inline: 1em;" src="images/tg.png" alt=""></a>
               </a>
             </li>
           </ul>
@@ -177,8 +177,8 @@
       <p>Контакты<br> Работа<br>Наша команда<br></p>
     </div> 
     <div class="col-lg-4 col-md-12t media-links">
-      <img style="width: 40px; margin-inline: 1em;" src="images/yt.png" alt="">
-      <img style="width: 40px; margin-inline: 1em;" src="images/tg.png" alt="">
+      <a href="https://youtube.com"><img style="width: 40px; margin-inline: 1em;" src="images/yt.png" alt=""></a> 
+      <a href="https://t.me/YuliyaBazhenova"><img style="width: 40px; margin-inline: 1em;" src="images/tg.png" alt=""></a>
     </div>   
       </div>
     </div>
