--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <img src="images/cat.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>sectetur adipisicing elit. Fugit illucilis aperiam consequatur nihil architecto odit cumque
-                          quia, maxime, odio sit tenetur! Nostrum!</p>
+                        <h5>Основы агрономии и растениеводства</h5>
+                        <p>Курс охватывает базовые знания по агрономии, растениеводству, выбору сельскохозяйственных культур и их особенностям. Предназначен для начинающих фермеров, агрономов и всех, кто хочет получить базовые знания для работы на сельскохозяйственном предприятии.</p>
                       </div>
 
                     </div>
@@ -113,8 +113,8 @@
                         <img src="images/cow.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                        <h5>Введение в животноводство: разведение и уход за скотом</h5>
+                        <p>Курс рассказывает о видах сельскохозяйственных животных, их особенностях, уходе, а также о требованиях к содержанию и кормлению. Идеален для работников животноводческих ферм, а также для начинающих фермеров и владельцев личных подсобных хозяйств.</p>
                       </div>
 
                     </div>
@@ -127,8 +127,8 @@
                         <img src="images/farm2.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                        <h5>Инновационные технологии в сельском хозяйстве</h5>
+                        <p>Курс изучает современные методы автоматизации, IoT-решения и точное земледелие. Подходит для руководителей и менеджеров агропредприятий, желающих повысить эффективность и производительность производства с использованием современных технологий.</p>
                       </div>
 
                     </div>
@@ -141,8 +141,8 @@
                         <img src="images/chiken.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                       <h5>Экологическое сельское хозяйство и органическое земледелие</h5>
+                        <p>В этом курсе объясняются принципы экологического и органического земледелия, его влияние на окружающую среду и способы применения на практике. Подходит для фермеров, агрономов и предпринимателей, ориентированных на экологически чистое производство.</p>
                       </div>
 
                     </div>
@@ -155,8 +155,8 @@
                         <img src="images/cow2.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                        <h5>Планирование и управление сельскохозяйственными проектами</h5>
+                        <p>Курс охватывает основы управления проектами в сельском хозяйстве, включая планирование, бюджетирование и анализ рисков. Рекомендуется для менеджеров и руководителей сельскохозяйственных предприятий, а также для стартаперов в АПК.</p>
                       </div>
 
                     </div>
@@ -169,22 +169,8 @@
                         <img src="images/farmdark.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="d-block w-100">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6">
-                        <img src="images/sheep.jpg" class="w-100" alt="...">
-                      </div>
-                      <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ila, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                        <h5>Техника и оборудование для АПК: эксплуатация и обслуживание</h5>
+                        <p>Курс посвящен основным видам сельскохозяйственной техники, ее обслуживанию, ремонту и оптимизации работы. Идеален для механиков, операторов сельхозтехники и специалистов по обслуживанию техники.</p>
                       </div>
 
                     </div>
@@ -197,9 +183,22 @@
                         <img src="images/farm1.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illum delectus corrupti
-                          facilis aperiam consequatur nihil architecto odit cumque quia, maxime, odio sit tenetur!
-                          Nostrum!</p>
+                        <h5>Агромаркетинг и продажа сельскохозяйственной продукции</h5>
+                        <p>Курс раскрывает основы маркетинга для сельскохозяйственных продуктов, каналы сбыта и особенности работы с рынком. Предназначен для фермеров, агроменеджеров и маркетологов, занимающихся продвижением продукции АПК.</p>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="d-block w-100">
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6">
+                        <img src="images/sheep.jpg" class="w-100" alt="...">
+                      </div>
+                      <div class="col-lg-6 col-md-6 slide-text">
+                        <h5>Агрохимия и внесение удобрений/h5>
+                        <p>Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
                       </div>
 
                     </div>
