--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Pricing</a>
+              <a class="nav-link" href="pricing.html">Наши программы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Conatacts</a>
+              <a class="nav-link" href="pricing.html">Контакты</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pricing.html">
