--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="styles/mycss.css" />
-  <title>Agro</title>
+  <title>Colos</title>
+   <link rel="apple-touch-icon" sizes="180x180" href="iles/favicon_io//apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="files/favicon_io//favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="files/favicon_io//favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 <body>
