--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <img src="images/sheep.jpg" class="w-100" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
-                        <h5>Агрохимия и внесение удобрений/h5>
+                        <h5>Агрохимия и внесение удобрений</h5>
                         <p>Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
                       </div>
 
