--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="d-block w-100">
+                  <div class="d-block w-100px">
                     <div class="row">
                       <div class="col-lg-6 col-md-6">
-                        <img src="images/sheep.jpg" class="w-100" alt="...">
+                        <img src="images/sheep.jpg" class="w-100px" alt="...">
                       </div>
                       <div class="col-lg-6 col-md-6 slide-text">
                         <h5>Агрохимия и внесение удобрений</h5>
