--- a/pricing.html
+++ b/pricing.html
@@ -34,7 +34,7 @@
               <a class="nav-link active" href="pricing.html">Наши программы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Контакты</a>
+              <a class="nav-link" href="pricing.html">Акции</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pricing.html">
@@ -64,11 +64,8 @@
               <div class="card">
                 <a href="#"><img src="images/cat.jpg" class="card-img-top" alt="cat"></a>
                 <div class="card-body">
-                  <h5 class="card-title"><a href="#">Курс ПК котэ</a></h5>
-                  <p class="card-text"><a href="#">
-                    Some quick example text to build on the card title and make up the bulk of the
-                      card's
-                      content.
+                  <h5 class="card-title"><a href="#">Агромаркетинг и продажа сельскохозяйственной продукции</a></h5>
+                  <p class="card-text"><a href="#">Курс раскрывает основы маркетинга для сельскохозяйственных продуктов, каналы сбыта и особенности работы с рынком. Предназначен для фермеров, агроменеджеров и маркетологов, занимающихся продвижением продукции АПК.
                   </a></p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
@@ -78,10 +75,8 @@
               <div class="card">
                 <img src="images/cow.jpg" class="card-img-top" alt="cow">
                 <div class="card-body">
-                  <h5 class="card-title">Курс ПК корова</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                  <h5 class="card-title">Основы агрономии и растениеводства</h5>
+                  <p class="card-text">Курс охватывает базовые знания по агрономии, растениеводству, выбору сельскохозяйственных культур и их особенностям. Предназначен для начинающих фермеров, агрономов и всех, кто хочет получить базовые знания для работы на сельскохозяйственном предприятии.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -90,10 +85,8 @@
               <div class="card">
                 <img src="images/sheep.jpg" class="card-img-top" alt="sheep">
                 <div class="card-body">
-                  <h5 class="card-title">Курс ПК Овечка</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                  <h5 class="card-title">Введение в животноводство: разведение и уход за скотом</h5>
+                  <p class="card-text">Курс рассказывает о видах сельскохозяйственных животных, их особенностях, уходе, а также о требованиях к содержанию и кормлению. Идеален для работников животноводческих ферм, а также для начинающих фермеров и владельцев личных подсобных хозяйств.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -103,10 +96,8 @@
               <div class="card">
                 <img src="images/chiken.jpg" class="card-img-top" alt="chiken">
                 <div class="card-body">
-                  <h5 class="card-title">Курс ПК Овечка</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                  <h5 class="card-title">Инновационные технологии в сельском хозяйстве</h5>
+                  <p class="card-text">Курс изучает современные методы автоматизации, IoT-решения и точное земледелие. Подходит для руководителей и менеджеров агропредприятий, желающих повысить эффективность и производительность производства с использованием современных технологий.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -115,10 +106,8 @@
               <div class="card">
                 <img src="images/farm1.jpg" class="card-img-top" alt="farm1">
                 <div class="card-body">
-                  <h5 class="card-title">Курс ПК Овечка</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                  <h5 class="card-title">Экологическое сельское хозяйство и органическое земледелие</h5>
+                  <p class="card-text">В этом курсе объясняются принципы экологического и органического земледелия, его влияние на окружающую среду и способы применения на практике. Подходит для фермеров, агрономов и предпринимателей, ориентированных на экологически чистое производство.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -127,10 +116,28 @@
               <div class="card">
                 <img src="images/farm2.jpg" class="card-img-top" alt="farm2">
                 <div class="card-body">
-                  <h5 class="card-title">Курс ПК Овечка</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                  <h5 class="card-title">Планирование и управление сельскохозяйственными проектами</h5>
+                  <p class="card-text">Курс охватывает основы управления проектами в сельском хозяйстве, включая планирование, бюджетирование и анализ рисков. Рекомендуется для менеджеров и руководителей сельскохозяйственных предприятий, а также для стартаперов в АПК.</p>
+                  <a href="#" class="btn btn-primary">Купить</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-4">
+              <div class="card">
+                <a href="#"><img src="images/cat.jpg" class="card-img-top" alt="cat"></a>
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">Техника и оборудование для АПК: эксплуатация и обслуживание</a></h5>
+                  <p class="card-text"><a href="#">Курс посвящен основным видам сельскохозяйственной техники, ее обслуживанию, ремонту и оптимизации работы. Идеален для механиков, операторов сельхозтехники и специалистов по обслуживанию техники.</a></p>
+                  <a href="#" class="btn btn-primary">Купить</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-4">
+              <div class="card">
+                <img src="images/cow.jpg" class="card-img-top" alt="cow">
+                <div class="card-body">
+                  <h5 class="card-title">Агрохимия и внесение удобрений</h5>
+                  <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -147,20 +154,16 @@
           
         </div>
 
-        <div class="col-lg-3 col-md-12">
+       <div class="col-lg-3 col-md-12">
           <div class="row px-2">
             <div class="col-lg-12 sidebar my-4">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nihil quasi possimus voluptatum! Error praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a href="#">Узнать больше>>></a></p>
+              <p>При оплате до 31 декабря 2024 г. на каждый курс предоставляется скидка 10% <a
+                  href="#">Узнать больше>>></a></p>
             </div>
             <div class="col-lg-12 sidebar my-4">
-              <p>Error praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a href="#">Узнать больше>>></a></p>
-            </div>
-            <div class="col-lg-12 sidebar my-4">
-              <p>praesentium impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a href="#">Узнать больше>>></a></p>
-            </div>
-            <div class="col-lg-12 sidebar my-4">
-              <p>Lorem ipsum dolor sit amet coum impedit iure assumenda at, corporis natus quae. Numquam laboriosam laborum quidem? <a href="#">Узнать больше>>></a></p>
-            </div>
+              <p>Для работодателей, которым необходимо обучить сотрудников, предоставляются скидки на группы от 10 человек <a
+                  href="#">Узнать больше>>></a></p>
+            </div>            
           </div>
         </div>
 
