--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="pricing.html">Наши программы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Контакты</a>
+              <a class="nav-link" href="pricing.html">Акции</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pricing.html">
