--- a/pricing.html
+++ b/pricing.html
@@ -76,7 +76,7 @@
                 <img src="images/cow.jpg" class="card-img-top" alt="cow">
                 <div class="card-body">
                   <h5 class="card-title">Основы агрономии и растениеводства</h5>
-                  <p class="card-text">Курс охватывает базовые знания по агрономии, растениеводству, выбору сельскохозяйственных культур и их особенностям. Предназначен для начинающих фермеров, агрономов и всех, кто хочет получить базовые знания для работы на сельскохозяйственном предприятии.</p>
+                  <p class="card-text">Курс охватывает базовые знания по агрономии, растениеводству, выбору сельскохозяйственных культур и их особенностям. Данный курс подойдет для начинающих фермеров, агрономов и всех тех, кто хочет получить базовые знания для работы на сельскохозяйственном предприятии.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -86,7 +86,7 @@
                 <img src="images/sheep.jpg" class="card-img-top" alt="sheep">
                 <div class="card-body">
                   <h5 class="card-title">Введение в животноводство: разведение и уход за скотом</h5>
-                  <p class="card-text">Курс рассказывает о видах сельскохозяйственных животных, их особенностях, уходе, а также о требованиях к содержанию и кормлению. Идеален для работников животноводческих ферм, а также для начинающих фермеров и владельцев личных подсобных хозяйств.</p>
+                  <p class="card-text">Курс рассказывает о видах сельскохозяйственных животных, их особенностях, уходе, а также о требованиях к содержанию и кормлению. Идеален для работников животноводческих ферм, а также для начинающих фермеров.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -138,6 +138,16 @@
                 <div class="card-body">
                   <h5 class="card-title">Агрохимия и внесение удобрений</h5>
                   <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
+                  <a href="#" class="btn btn-primary">Купить</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-4">
+              <div class="card">
+                <a href="#"><img src="images/cat.jpg" class="card-img-top" alt="cat"></a>
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">Основы законодательства и правовые аспекты АПК</a></h5>
+                  <p class="card-text"><a href="#">Курс рассматривает правовые нормы, регулирующие деятельность сельскохозяйственных предприятий, требования к безопасности и санитарным нормам. Рекомендуется для агробизнесменов, руководителей и всех, кто заинтересован в юридических аспектах агропромышленного бизнеса.</a></p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
