--- a/pricing.html
+++ b/pricing.html
@@ -127,7 +127,7 @@
                 <a href="#"><img src="images/cat.jpg" class="card-img-top" alt="cat"></a>
                 <div class="card-body">
                   <h5 class="card-title"><a href="#">Техника и оборудование для АПК: эксплуатация и обслуживание</a></h5>
-                  <p class="card-text"><a href="#">Курс посвящен основным видам сельскохозяйственной техники, ее обслуживанию, ремонту и оптимизации работы. Идеален для механиков, операторов сельхозтехники и специалистов по обслуживанию техники.</a></p>
+                  <p class="card-text"><a href="#">Курс посвящен основным видам сельскохозяйственной техники, ее обслуживанию, ремонту и оптимизации работы. Идеально данный курс подойдет для механиков, операторов сельхозтехники и специалистов по обслуживанию техники.</a></p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
@@ -137,7 +137,7 @@
                 <img src="images/cow.jpg" class="card-img-top" alt="cow">
                 <div class="card-body">
                   <h5 class="card-title">Агрохимия и внесение удобрений</h5>
-                  <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
+                  <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов, с учетом требований безопасности. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
