--- a/pricing.html
+++ b/pricing.html
@@ -137,7 +137,7 @@
                 <img src="images/cow.jpg" class="card-img-top" alt="cow">
                 <div class="card-body">
                   <h5 class="card-title">Агрохимия и внесение удобрений</h5>
-                  <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов, с учетом требований безопасности. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
+                  <p class="card-text">Курс охватывает принципы агрохимии, выбор удобрений и правила их внесения в почву для достижения наилучших результатов, с учетом требований безопасности разработанных стандартов. Подходит для агрономов, фермеров и специалистов, занимающихся вопросами питания растений.</p>
                   <a href="#" class="btn btn-primary">Купить</a>
                 </div>
               </div>
