--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
     </nav>
   </header>
 
-  <section>
+  <section style="background-image: url(files/f-p.jpg)>
     <div class="container-fluid mt-4">
       <div class="row">
         <div class="col-lg-1">
